--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -34,6 +34,10 @@
     color: white;
     font-size: 1.2rem;
     font-weight: 600;
+    background: none;
+    cursor: pointer;
+    border: none;
+    outline: none;
 }
 
 .search-container {
